--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,4 +1,10 @@
-postgres.driver=org.postgresql.Driver
-postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-postgres.password=admin
-postgres.name=postgres
+postgres.driver=org.h2.Driver
+postgres.url=jdbc:h2:~/myfirstdb
+postgres.password=
+postgres.name=H2
+
+
+#postgres.driver=org.postgresql.Driver
+#postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
+#postgres.password=admin
+#postgres.name=postgres
