Solving H2 version. Working on my local.

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,10 +1,16 @@
-postgres.driver=org.h2.Driver
-postgres.url=jdbc:h2:~/myfirstdb
-postgres.password=
-postgres.name=H2
+postgres.driver=org.postgresql.Driver
+postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
+postgres.password=admin
+postgres.name=postgres
 
+#postgres.driver=org.h2.Driver
+#postgres.url=jdbc:h2:tcp://localhost/~/myfirstdb
+#postgres.password=
+#postgres.name=H2
 
-#postgres.driver=org.postgresql.Driver
-#postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-#postgres.password=admin
-#postgres.name=postgres
+#CREATE TABLE myusers(
+#    id bigint UNIQUE NOT NULL AUTO_INCREMENT PRIMARY KEY,
+#    firstname varchar(255) NOT NULL,
+#    lastname varchar(255) NOT NULL,
+#    age int NOT NULL
+#);
