Minimal changes to move into another computer.

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -5,8 +5,8 @@ postgres.name=postgres
 
 #postgres.driver=org.h2.Driver
 #postgres.url=jdbc:h2:tcp://localhost/~/myfirstdb
-#postgres.password=
-#postgres.name=H2
+#postgres.password=h2
+#postgres.name=h2
 
 #CREATE TABLE myusers(
 #    id bigint UNIQUE NOT NULL AUTO_INCREMENT PRIMARY KEY,
@@ -14,3 +14,5 @@ postgres.name=postgres
 #    lastname varchar(255) NOT NULL,
 #    age int NOT NULL
 #);
+#jdbc:h2:tcp://localhost/~/myfirstdb
+
