--- a/pom.xml
+++ b/pom.xml
@@ -50,8 +50,7 @@
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <version>2.0.202</version>
+            <artifactId>h2</artifactId><version>2.2.220</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
