- Removed logback. - Moved empty returns inside catch blocks. - Added code to run methods from main in SimpleJDBCRepository. - Added detection for not created tables.

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,12 +1,13 @@
-postgres.driver=org.postgresql.Driver
-postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-postgres.password=admin
-postgres.name=postgres
+#postgres.driver=org.postgresql.Driver
+#postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
+#postgres.password=admin
+#postgres.name=postgres
 
-#postgres.driver=org.h2.Driver
+postgres.driver=org.h2.Driver
+postgres.url=jdbc:h2:mem:myfirstdb
 #postgres.url=jdbc:h2:tcp://localhost/~/myfirstdb
-#postgres.password=h2
-#postgres.name=h2
+postgres.password=
+postgres.name=h2
 
 #CREATE TABLE myusers(
 #    id bigint UNIQUE NOT NULL AUTO_INCREMENT PRIMARY KEY,
