Disabled table check and creation Sonar recommendations app.properties for h2 db Added logback back in

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -1,6 +1,11 @@
-postgres.driver=org.postgresql.Driver
-postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
-postgres.password=admin
+#postgres.driver=org.postgresql.Driver
+#postgres.url=jdbc:postgresql://localhost:5432/myfirstdb
+#postgres.password=admin
+#postgres.name=postgres
+
+postgres.driver=org.h2.Driver
+postgres.url=jdbc:h2:mem:testdb
+postgres.password=postgres
 postgres.name=postgres
 
 #postgres.driver=org.h2.Driver
