Removed the id from the "create user" sql

--- a/src/main/resources/app.properties
+++ b/src/main/resources/app.properties
@@ -15,7 +15,7 @@ postgres.name=postgres
 #postgres.name=h2
 
 #CREATE TABLE myusers(
-#    id bigint UNIQUE NOT NULL AUTO_INCREMENT PRIMARY KEY,
+#    id bigserial UNIQUE NOT NULL PRIMARY KEY,
 #    firstname varchar(255) NOT NULL,
 #    lastname varchar(255) NOT NULL,
 #    age int NOT NULL
